--- a/day3.html
+++ b/day3.html
@@ -4,30 +4,47 @@
     <meta charset="utf-8">
     <title>Layout fieldset</title>
     <style>
+    .container{
+      background: #696969;
+      color: white;
+      width: 1200px;
+      margin: auto;
+    }
+      #topnav{
+        //background: pink;
+          padding: 5px;
+
+      }
       #header{
-        background: red;
+        background: black;
+        text-align: center;
       }
       #nav{
-        background: green;
+        background: #292929;
+        padding: 5px;
       }
       #content{
-        background: blue;
+        //background: blue;
         float: left;
-        width: 70%;
+        width: 68%;
+        padding: 5px;
       }
       #sidebar{
-        background: purple;
+        //background: purple;
         float: left;
         width: 30%;
+        padding: 5px;
       }
       #footer{
-        background: yellow;
+        background: black;
         clear: both;
       }
       </style>
   </head>
   <body>
+    <div class="container">
     <div id="header"><img src= "images/banner.png" /></div>
+    <div id="topnav">Navigation</div>
     <div id="nav">Navigation</div>
     <div id="sidebar">Lorem ipsum dolor sit amet, vix sanctus meliore omittantur ut, vix imperdiet moderatius an. Sea ludus petentium cu. Novum dicunt invenire quo ex, eu nobis rationibus quo. Ad usu falli insolens, qui et labores alienum. Dignissim eloquentiam definitiones vis te. Decore tractatos id mel, vis ex laudem labore dicunt.</div>
     <div id="content">Content</div>
